Fix alignment issue in first section info.

--- a/css/style.css
+++ b/css/style.css
@@ -39,27 +39,30 @@ li.logo {
 
 .info{
     display: flex;
-    flex: 1 0 100%;
+    flex: 1 1 100%;
+    justify-content: space-around;
+    gap:50px;
+    padding: 50px 0;
 }
 .info1{
     flex-direction: column;
 }
 
-.section1 h1{
+.info1 h1{
    margin-top: 100px;
    font-size: 36px;
    font-weight:bolder;
    width: 50%;
 }
 
-.section1 p{
-    /* width:60%; */
+.info1 p{
     padding: 10px 0;
     font-size: 18px;
+    width:80%;
 }
 
 button{
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
     padding: 6px 25px;
     background-color: #3882f6;
     color: #f9faf8;
@@ -69,9 +72,9 @@ button{
 
 }
 img{
-    height:300px;
-    width: 600px;
-    margin: 100px;
+    height:200px;
+    width: 500px;
+    margin: 100px 0;
    
 }
 
